--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,12 +5,13 @@
     <link rel="icon" href="https://17columns.com/static/media/logo.2ce5ff68de603bd8ba7b.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="17 Columns is your trusted partner in digital marketing solutions, offering a range of services to help your business grow." />
+    <meta name="keywords" content="17 Columns, digital marketing, SEO, content marketing, online advertising" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>17 Columns</title>
+    <title>17 Columns | Digital Marketing Solutions</title>
 
-    <!-- Google tag (gtag.js) -->
+    <!-- Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16659728445"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -20,7 +21,7 @@
       gtag('config', 'AW-16659728445');
     </script>
 
-    <!-- Event snippet for Submit lead form conversion page -->
+    <!-- Google Conversion Tracking -->
     <script>
       gtag('event', 'conversion', {
           'send_to': 'AW-16659728445/SO5ECMCgkMcZEL2Q_Yc-',
@@ -29,13 +30,33 @@
       });
     </script>
 
-    <!-- Event snippet for Submit lead form (1) conversion page -->
     <script>
       gtag('event', 'conversion', {
           'send_to': 'AW-16659728445/c1iICIS3n8cZEL2Q_Yc-',
           'value': 1.0,
           'currency': 'INR'
       });
+    </script>
+
+    <!-- Structured Data for SEO -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "17 Columns",
+      "url": "https://17columns.com",
+      "logo": "https://17columns.com/static/media/logo.2ce5ff68de603bd8ba7b.png",
+      "sameAs": [
+        "https://www.facebook.com/17columns",
+        "https://twitter.com/17columns",
+        "https://www.linkedin.com/company/17columns"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+91-123-456-7890",
+        "contactType": "Customer Support"
+      }
+    }
     </script>
 
   </head>
