--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="17 Columns, digital marketing, SEO, content marketing, online advertising" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>17 Columns | Digital Marketing Solutions</title>
+    <title>17 Columns | Construction and Interiors</title>
 
     <!-- Google Tag Manager -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-16659728445"></script>
