--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="https://17columns.com/static/media/logo.2ce5ff68de603bd8ba7b.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="17 Columns is your trusted partner in digital marketing solutions, offering a range of services to help your business grow." />
-    <meta name="keywords" content="17 Columns, digital marketing, SEO, content marketing, online advertising" />
+    <meta name="description" content="17 Columns is a leading provider of construction and interior design solutions, specializing in modern spaces and customized building services." />
+    <meta name="keywords" content="construction services, interior design, home renovation, office interiors, building contractors, 17 Columns" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>17 Columns | Construction and Interiors</title>
