--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="17 Columns specializes in high-quality construction and interior design solutions, offering modern designs and personalized spaces for residential and commercial projects." />
-    <meta name="keywords" content="construction services, interior design, home renovation, office interiors, building contractors, 17 Columns, construction and interiors" />
+    <meta name="keywords" content=" 17 Columns, construction services, interior design, home renovation, office interiors, building contractors, construction and interiors" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>17 Columns | Construction and Interiors</title>
